# netbox-config-backup

./: .gitignore  README.md  pyproject.toml
netbox_config_backup/: __init__.py  choices.py  forms.py  jobs.py  models.py  navigation.py  tables.py  urls.py  utils.py  views.py
netbox_config_backup/api/: serializers.py  urls.py
netbox_config_backup/migrations/: 0001_initial.py  0002_alter_configchange_status.py  0003_alter_configchange_options_and_more.py
netbox_config_backup/templates/netbox_config_backup/: backup_list.html  backupschedule_edit.html  backupschedule_list.html  configbackuprecord.html  configchange.html  deviceconfigbackup.html  trigger_backup.html
